infra/k8s/client-depl.yaml
## client-depl
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agrofest-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agrofest-client
  template:
    metadata:
      labels:
        app: agrofest-client
    spec:
      containers:
        - name: client
          image: racf3008/agrofest-client
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: agrofest-client-srv
spec:
  selector:
    app: agrofest-client
  ports:
    - name: agrofest-client
      protocol: TCP
      port: 5173
      targetPort: 5173
