infra/k8s/server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agrofest-server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agrofest-server
  template:
    metadata:
      labels:
        app: agrofest-server
    spec:
      containers:
        - name: server
          image: racf3008/agrofest-server
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: agrofest-server-srv
spec:
  selector:
    app: agrofest-server
  type: ClusterIP
  ports:
    - name: agrofest-server
      protocol: TCP
      port: 3000
      targetPort: 3000
